bk_ida/gccida/c0/compare_constant_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_constant_1/src/varasm.c:3114:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+3Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_constant_1/src/varasm.c:3120:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+68h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_constant_1/src/varasm.c:3300:8: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
newa = lang_hooks_0.expand_constant( expa); 
       ^~~~~~~~~~~~
       lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_constant_1/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_constant_1/src/varasm.c:3300:36: error: called object type '<dependent type>' is not a function or function pointer
newa = lang_hooks_0.expand_constant( expa); 
                                   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_constant_1/src/obj/varasm.o] Error 1
